# 16_35_Pset1

./: 16_35_threading_qs.docx  CMakeLists.txt  README.md  timespent.txt
include/: controller.h  simulator.h  utils.h  validate.h
question/src/: controller.c  utils.c  validate.c  vehicle.c
src/: .simulator.c.swp  controller.c  main.c  simulator.c  utils.c  validate.c  vehicle.c
tests/: test_controller.c
